--- a/style.css
+++ b/style.css
@@ -90,3 +90,55 @@ color: green;
     padding: 3px;
     margin-right: 5px;
 }
+
+
+/* animation for the todo list */
+li {
+    opacity: 0;
+    animation: new-item-animation 0.3s linear forwards ;
+}
+
+@keyframes new-item-animation{
+    from{
+        opacity: 0;
+        transform: translateY(-400px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+li.deleted-item{
+    animation: removed-item-animation 1s cubic-bezier(0.55,-0.04,0.91,0.94);
+    transform-origin: 0% 100%;
+}
+
+@keyframes removed-item-animation {
+    0%{
+        opacity: 1;
+        transform: rotate(0);
+    }
+    100%{
+        opacity: 0;
+        transform: translateY(600px) rotateZ(90deg);
+    }
+    
+}
+
+
+/* hide alert message */
+
+.toggleMe{
+    animation: hideMe 3s forwards;
+}
+@keyframes hideMe {
+    0%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+    
+}
